# image_convertor

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/: border_maker.py  size_convertor.py
tests/: test_border_maker.py  test_size_convertor.py
