[tool.poetry]
name = "image_convertor"
version = "0.1.0"
description = ""
authors = ["lvojp <lvojp.sgp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"
pytest-mock = "^3.8.2"
opencv-python = "4.5.5.62"
opencv-contrib-python = "4.5.5.62"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
